# backend

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: deploy.yml
ai_core/: .env.example  .gitignore  ai_scenario.py  main.py  models.py  ollama_client.py  pyproject.toml
ai_core/api/: ai_scenario_router.py  app.py  rag_router.py
ai_core/api/routers/: ai_scenario.py  chatting.py  rag.py
ai_core/chatting/: __init__.py  chatting.py  dependencies.py
ai_core/prompts/: AI_SCENARIO.md  CHATTING.md  CRITIC.md  QUALIFIER.md
ai_core/rag/: __init__.py  dependencies.py  document_store.py  main.py  parse_md.py
ai_core/scenario/: __init__.py  dependencies.py  models.py  ollama_client.py  scenario_master.py
alembic/: env.py
alembic/versions/: 0599272539a1_init.py  54525c48f271_add_welcome_message_rag_enabled_.py  6ee2659b9c3e_add_indexes.py
app/: config.py  database.py  main.py
app/models/: campaign.py  dialog.py  knowledge_doc.py  lead.py  message.py
app/repositories/: base.py  campaign.py  dialog.py  knowledge_doc.py  lead.py
app/routers/: campaigns.py  dialogs.py  health.py  knowledge.py  leads.py  logs.py  stats.py
app/schemas/: campaign.py  dialog.py  knowledge_doc.py  lead.py
app/services/: campaign.py  dialog.py  knowledge_doc.py  lead.py  logs.py  stats.py
uploads/knowledge/: c1f42495-0dbd-4577-a8b6-46e2cd4d0b86.txt
