[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "edge-tts>=7.2.8",
    "fastapi[standard]>=0.139.0",
    "httpx>=0.28.1",
    "langchain>=1.3.12",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "ruff>=0.15.20",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.50.0",
]
